<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/reachGoalQuestion"
        android:layout_width="fill_parent"
        android:text="@string/did_you_reach_the_goal_question"
        android:textSize="18sp"
        android:layout_below="@id/dialogTitle"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reachGoalQuestion"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialogDoneNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_reschedule" />

        <Button
            android:id="@+id/dialogDoneYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes" />
    </LinearLayout>


</RelativeLayout>