<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/todo_dialog_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/addTodoText"
        android:layout_width="fill_parent"
        android:inputType="text"
        android:layout_below="@id/dialogTitle"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTodoText"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialogCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button_text" />

        <Button
            android:id="@+id/dialogAddButton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_button_text" />
    </LinearLayout>


</RelativeLayout>